# fithub

./: .coverage  .gitignore  .pre-commit-config.yaml  CHAT_INTEGRATION.md  CLOUDFLARE_INTEGRATION.md  Dockerfile  Makefile  README.md  bandit-report.json  conftest.py  coverage.xml  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  safety-report.json
.github/workflows/: ci.yml  dev.yml  docker-build.yml
accounts/: api.py  api_urls.py  serializers.py  urls.py  views.py  web_urls.py  web_views.py
accounts/templates/accounts/: login.html  register.html
auth/: test_api.py
authentication/: test_api.py  urls.py  views.py
docs/: API.md  ARCHITECTURE.md  C4_DEPLOYMENT.md  CI_PIPELINE.md  DEPLOYMENT.md  DEVELOPMENT.md  ER_DIAGRAM.md
fitbot/: apps.py
fithub/: asgi.py  settings.py  test_settings.py  test_settings_sqlite.py  urls.py  wsgi.py
fithub/static/css/: style.css
fithub/templates/: base.html
goals/: admin.py  api.py  api_urls.py  factories.py  models.py  serializers.py  test_api.py
goals/migrations/: 0001_initial.py
home/: views.py
home/templates/home/: about.html  index.html
labhub/: asgi.py  settings.py  urls.py  wsgi.py
labhub/templates/: base.html
nutrition/: admin.py  api.py  api_urls.py  factories.py  models.py  serializers.py  test_api.py
nutrition/migrations/: 0001_initial.py
